samples/_failures_safe/1761642210_6bb494_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c637949d.c: In function ‘main’:
./samples/SAFE/__tmp_c637949d.c:177:5: error: expected declaration or statement at end of input
  177 |     if (len > 0 && input[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_c637949d.c:177:5: error: expected declaration or statement at end of input
